# ocaml-autodiff

./: .gitignore  .ocamlformat  AUTHORS.md  INSTALL.md  MS2Report.txt  README.md  RepoURL.txt  TASK_BOARD_SPRINT_C.md  dune-project  expression.dot  gallery.yaml
_build/: .db  .digest-db  log
_build/default/: META.teamproject  README.md  teamproject.dune-package  teamproject.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: teamproject.cma  teamproject.cmxa  teamproject.cmxs
_build/default/lib/.merlin-conf/: lib-teamproject
_build/default/lib/.teamproject.objs/byte/: teamproject.cmi  teamproject.cmo  teamproject.cmt
_build/default/lib/.teamproject.objs/native/: teamproject.cmx
_build/default/test/: test_teamproject.ml
_build/default/test/.merlin-conf/: exe-test_teamproject
_build/default/test/.test_teamproject.eobjs/byte/: dune__exe__Test_teamproject.cmi  dune__exe__Test_teamproject.cmti
_build/default/test/.test_teamproject.eobjs/native/: dune__exe__Test_teamproject.cmx
_build/install/default/lib/teamproject/: META  dune-package  teamproject.cma  teamproject.cmi  teamproject.cmt  teamproject.cmx  teamproject.cmxa  teamproject.cmxs  teamproject.ml
data/: y_eq_3x_minus_2.csv
lib/: dune  forward_ad.ml  forward_ad.mli  grad_check.mli  graphviz_export.ml  graphviz_export.mli  teamproject.ml  trainer.ml  trainer.mli
test/: dune  test_expr.ml  test_forward_ad.ml  test_graphviz_export.ml  test_trainer.ml
