(test
 (name test_ocaml_autodiff)
 (libraries ocaml_autodiff ounit2))

(test
 (name test_forward_ad)
 (libraries ocaml_autodiff ounit2))

(test
 (name test_grad_check)
 (libraries ocaml_autodiff ounit2))

(test
 (name test_graphviz_export)
 (libraries ocaml_autodiff ounit2))

(test
 (name test_expr)
 (libraries ocaml_autodiff ounit2))

(test
 (name test_trainer)
 (libraries ocaml_autodiff ounit2)
 (deps
  (source_tree ../data)))
